<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/indianCitiesTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/indian_cities_api"
        android:textColor="@color/colorTextTitle_BtnText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cV_cardView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@id/indianCitiesTitle_textView"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="3dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:id="@+id/indianCitiesDetails_cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_marginStart="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/cityName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorText"
                android:textStyle="normal"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/stateName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorText"
                android:textStyle="normal"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/districtName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorText"
                android:textStyle="normal"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ImageButton
        android:id="@+id/back_imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/back"
        app:layout_constraintTop_toBottomOf="@id/cV_cardView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorButtonColor"
        android:contentDescription="@string/backbutton"/>

    <TextView
        android:id="@+id/sizeOfIndianCitiesArray_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorText"
        android:textStyle="normal"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/cV_cardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        />

    <ImageButton
        android:id="@+id/next_imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/next"
        app:layout_constraintTop_toBottomOf="@id/cV_cardView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorButtonColor"
        android:contentDescription="@string/nextbutton"/>

    <View
        android:id="@+id/view_View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/next_imageButton"
        android:layout_marginTop="5dp"
        android:background="@color/colorButtonColor"/>

    <LinearLayout
        android:id="@+id/fName_mobNum_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/view_View"
        >

        <EditText
            android:id="@+id/fullName_editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/full_name"
            android:textColor="@color/colorText"
            android:textStyle="normal"
            android:textSize="21sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:importantForAutofill="no"
            android:inputType="text"/>

        <EditText
            android:id="@+id/mobileNum_editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/mobile_no"
            android:textColor="@color/colorText"
            android:textStyle="normal"
            android:textSize="21sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"/>

    </LinearLayout>

    <Button
        android:id="@+id/sendBtn_button"
        android:layout_width="200dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/fName_mobNum_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/send"
        android:textColor="@color/colorTextTitle_BtnText"
        android:background="@color/colorButtonColor"
        android:textSize="21sp"
        android:textStyle="normal"
        android:contentDescription="@string/send"/>

    <View
        android:id="@+id/view2_View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/sendBtn_button"
        android:layout_marginTop="5dp"
        android:background="@color/colorButtonColor"
        />

    <Switch
        android:id="@+id/changeColor_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        app:layout_constraintTop_toBottomOf="@id/view2_View"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/view3_View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/changeColor_switch"
        android:layout_marginTop="5dp"
        android:background="@color/colorButtonColor"
        />

    <TextView
        android:id="@+id/lastFeedbackTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/last_feedback"
        android:textColor="@color/colorTextTitle_BtnText"
        app:layout_constraintTop_toTopOf="@id/view3_View"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/lastFeedback_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastFeedbackTitle_textView"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="normal|italic"
        android:textColor="@color/colorText"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>