<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/colorBackground">


    <androidx.cardview.widget.CardView
        android:id="@+id/user_cV_cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="3dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:id="@+id/userDetail_cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_marginStart="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_is"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number_is"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/fullName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textStyle="normal"
                    android:textSize="21sp"
                    android:gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/mobileNum_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:textStyle="normal"
                    android:textSize="21sp"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/user_cV_cardView"
        android:layout_marginTop="15dp"
        android:background="@color/colorButtonColor"/>

    <TextView
        android:id="@+id/feedback_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="31sp"
        android:textStyle="bold"
        android:text="@string/feedback"
        android:textColor="@color/colorTextTitle_BtnText"
        app:layout_constraintTop_toBottomOf="@id/view_View"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/comment_editText"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_textView"
        android:layout_marginTop="15dp"
        android:hint="@string/comment"
        android:gravity="center"
        android:textStyle="normal|italic"
        android:textSize="21sp"
        android:textColor="@color/colorText"
        android:inputType="text"
        android:autofillHints="no"
        />

    <Button
        android:id="@+id/commentBtn_button"
        android:layout_width="200dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/comment_editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/comment"
        android:textColor="@color/colorTextTitle_BtnText"
        android:background="@color/colorButtonColor"
        android:textSize="21sp"
        android:textStyle="normal"
        android:contentDescription="@string/comment"/>


    <View
        android:id="@+id/viewII_View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/commentBtn_button"
        android:layout_marginTop="15dp"
        android:background="@color/colorButtonColor"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/android_robot"
        app:layout_constraintTop_toBottomOf="@id/viewII_View"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/androidimage"/>

</androidx.constraintlayout.widget.ConstraintLayout>